crates/ridge-lower/tests/snapshots/lowering__with_chained.snap
---
source: crates/ridge-lower/tests/lowering.rs
expression: rendered
---
module: m0
items_count: 1
items:
  - kind: fn
    name: with_chained
    pub: false
    main: false
    caps: CapabilitySet(0)
    ret_ty: Con(102)
    params:
      - name: p
        ty: Con(102)
    body:
      LetIn(n0):
        pat:
          Bind: p1
        value:
          RecordUpdate(n1):
            base:
              Local(n2): p
            updates:
              x:
                Lit(n3): Int(1)
        body:
          RecordUpdate(n4):
            base:
              Local(n5): p1
            updates:
              y:
                Lit(n6): Int(2)
