crates/ridge-lower/tests/snapshots/lowering__with_simple.snap
---
source: crates/ridge-lower/tests/lowering.rs
expression: rendered
---
module: m0
items_count: 1
items:
  - kind: fn
    name: with_simple
    pub: false
    main: false
    caps: CapabilitySet(0)
    ret_ty: Con(107)
    params:
      - name: p
        ty: Con(107)
    body:
      RecordUpdate(n0):
        base:
          Local(n1): p
        updates:
          x:
            Lit(n2): Int(10)
